Refactoring ImageService to allow multiple upload services, twitpic and yfrog working so far, more to come...

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -646,5 +646,11 @@
 	},
 	"add_mention_action": {
 	  "message": "Mention"
+	},
+	"g_image_service": {
+	  "message": "Image Service"
+	},
+	"l_image_up_service": {
+	  "message": "Image Upload Service:"
 	}
 }
