Allowing users to change the default locale.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -661,5 +661,8 @@
 	},
 	"l_image_up_service": {
 	  "message": "Image Upload Service:"
+	},
+	"l_default_locale": {
+	  "message": "Default Locale:"
 	}
 }
