--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -667,5 +667,14 @@
 	},
 	"automatic": {
 	  "message": "Same as browser"
+	},
+	"trending_topics": {
+	  "message": "Trends"
+	},
+	"g_trending_topics":{
+	  "message": "Trending Topics" 
+	},
+	"l_trending_topics_woeid":{
+	  "message": "Trending Topics Locale:" 
 	}
 }
