Little issue with variable names... Added internationalization support for the newly added labels. Updated the pt_BR translation.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -688,5 +688,8 @@
 	},
 	"report_action": {
 	  "message": "Report Spam"
+	},
+	"l_shortener_oauth": {
+	  "message": "Use personal account authentication:"
 	}
 }
